Added start script for Heroku

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Play drunk chess with friends",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "node index.js",
+    "start": "node index.js"
+
   },
   "keywords": [
     "chess",
